--- a/.env
+++ b/.env
@@ -9,7 +9,8 @@ DB_PASSWORD=postgres
 DB_HOST=postgres.cl86caou6xdu.us-east-1.rds.amazonaws.com
 DB_PORT=5432
 
-CORS_ALLOWED_ORIGINS=http://d3mlftirilvjpl.cloudfront.net
+CORS_ALLOWED_ORIGINS=
+API_URL=
 
 REDIS_HOST=clustercfg.redis.sbckyk.use1.cache.amazonaws.com
 REDIS_PORT=6379
