--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,3 +29,14 @@ services:
       - REDIS_DB=${REDIS_DB}
       - REDIS_PASSWORD=${REDIS_PASSWORD}
       - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS}
+
+  frontend:
+    image: 664418977283.dkr.ecr.us-east-1.amazonaws.com/prod-frontend
+    container_name: frontend_app
+    restart: always
+    ports:
+      - "8003:8003"
+    environment:
+      - DJANGO_SETTINGS_MODULE=frontend_app.settings
+      - API_URL=${API_URL}
+      - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS}
